# work_calc

./: .gitignore  Cargo.toml  Makefile  sample_setting.toml  work_calc.code-workspace
src/: case.rs  cli.rs  cli.yml  input.rs  main.rs  plan.rs  print.rs  setting.rs  validation.rs  work_hour.rs
