[package]
authors = ["Toshiki.Kawazoe <bushy.trivial.0o@icloud.com>"]
edition = "2021"
name = "work_calc"
rust-version = "1.67.1"
version = "1.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"]}
env_logger = "0.10.0"
log = "0.4.17"
serde = {version = "1.0.152", features = ["derive"]}
toml = "0.7.2"
