[package]
authors = ["Toshiki.Kawazoe <bushy.trivial.0o@icloud.com>"]
edition = "2021"
name = "work_calc"
rust-version = "1.73"
version = "1.3.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4", features = ["derive"]}
env_logger = "0.10"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
toml = "0.8"
